# GenAI-E-Book-Reader

./: .gitignore  APPIMAGE.md  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  PLANO-DE-DESENVOLVIMENTO.md  README.ar.md  README.en-GB.md  README.fr-FR.md  README.md  REQUIREMENTS.md  REQUISITOS.md  ROADMAP.md  TUTORIAL-WINDOWS.md  TUTORIAL.ar.md  TUTORIAL.en-GB.md  TUTORIAL.fr-FR.md  TUTORIAL.md  build-cross-windows.sh  build-mingw.bat  release_notes.md  setup-mingw-cross-compile.sh
.github/workflows/: build-appimage.yml  build-windows.yml
build-release/: CMakeCache.txt  Makefile  cmake_install.cmake
build-release/.qt/: QtDeploySupport.cmake
build-release/genai_reader_autogen/: deps  moc_predefs.h  mocs_compilation.cpp
build-release/genai_reader_autogen/YPKJ5OE7LN/: moc_MainWindow.cpp  moc_MainWindow.cpp.d  moc_PdfViewerWidget.cpp  moc_PdfViewerWidget.cpp.d  moc_ViewerWidget.cpp  moc_ViewerWidget.cpp.d
cmake/: ExtractChangelog.cmake  toolchain-mingw.cmake
docs/: Doxyfile  annotated.html  annotated_dup.js  classes.html  customdox.css  dir_000004_000002.html  dir_000005_000006.html  dir_000006_000000.html  dir_000006_000003.html  dir_000006_000004.html  dir_000006_000007.html  dir_000007_000000.html  dir_000007_000004.html  dir_150914856462aad8e29fc515cd230082.html  dir_150914856462aad8e29fc515cd230082.js  dir_150914856462aad8e29fc515cd230082_dep.map  dir_150914856462aad8e29fc515cd230082_dep.md5  dir_2b65419623c1304a73c5ce999091c82f.html  dir_2b65419623c1304a73c5ce999091c82f.js  dir_2b65419623c1304a73c5ce999091c82f_dep.map  dir_2b65419623c1304a73c5ce999091c82f_dep.md5  dir_2e98e94d0a72493929fa275b880b54c8.html  dir_2e98e94d0a72493929fa275b880b54c8.js  dir_2e98e94d0a72493929fa275b880b54c8_dep.map  dir_2e98e94d0a72493929fa275b880b54c8_dep.md5  dir_645da21f35c29635d37e8b3615e34ba6.html  dir_645da21f35c29635d37e8b3615e34ba6.js  dir_645da21f35c29635d37e8b3615e34ba6_dep.map  dir_645da21f35c29635d37e8b3615e34ba6_dep.md5  dir_785446ae038da55b227e01210e47abd0.html  dir_785446ae038da55b227e01210e47abd0.js  dir_785446ae038da55b227e01210e47abd0_dep.map  dir_785446ae038da55b227e01210e47abd0_dep.md5  dir_85c22575a4665ab2293d24f38c57925e.html  dir_85c22575a4665ab2293d24f38c57925e.js  dir_85c22575a4665ab2293d24f38c57925e_dep.map  dir_85c22575a4665ab2293d24f38c57925e_dep.md5  dir_9c869cc3a6d7190ddcef4d8b0e1244f4.html  dir_9c869cc3a6d7190ddcef4d8b0e1244f4.js  dir_9c869cc3a6d7190ddcef4d8b0e1244f4_dep.map  (+67 more)
docs/assets/: customdox.css
docs/d0/d07/: SearchProgressDialog_8h__incl.map  SearchProgressDialog_8h__incl.md5
docs/d0/d17/: classLlmSettingsDialog.html  classLlmSettingsDialog.js
docs/d0/d3e/: WelcomeDialog_8h__dep__incl.map  WelcomeDialog_8h__dep__incl.md5
docs/d0/d46/: classOpfMergeDialog.html  classOpfMergeDialog.js
docs/d0/d54/: classEmbeddingSettingsDialog.html  classEmbeddingSettingsDialog.js
docs/d0/d55/: classSummaryDialog__coll__graph.map  classSummaryDialog__coll__graph.md5
docs/d0/d6d/: ChatDock_8cpp__incl.map  ChatDock_8cpp__incl.md5
docs/d0/d85/: ChatDock_8h__dep__incl.map  ChatDock_8h__dep__incl.md5
docs/d0/d89/: md_GenAi-E-Book-Reader_2REQUISITOS.html
docs/d0/d91/: classWelcomeDialog__coll__graph.md5
docs/d0/dad/: EmbeddingIndexer_8cpp.html
docs/d0/daf/: classChatDock.html  classChatDock.js
docs/d0/dbc/: classRecentFilesDialog__coll__graph.map  classRecentFilesDialog__coll__graph.md5
docs/d0/dd0/: ViewerWidget_8cpp.html
docs/d1/d18/: OpfStore_8h.html  OpfStore_8h.js  OpfStore_8h_source.html
docs/d1/d1e/: structgenai_1_1DeveloperInfo-members.html
docs/d1/d3e/: classgenai_1_1Reader-members.html
docs/d1/d40/: SummaryDialog_8cpp.html
docs/d1/d4a/: OpfStore_8cpp.html
docs/d1/d51/: VectorIndex_8h__incl.map  VectorIndex_8h__incl.md5
docs/d1/d52/: OpfMergeDialog_8h__incl.map  OpfMergeDialog_8h__incl.md5
docs/d1/d5b/: classTutorialDialog__coll__graph.md5
docs/d1/d70/: TutorialDialog_8h__incl.map  TutorialDialog_8h__incl.md5
docs/d1/d80/: TutorialDialog_8cpp__incl.map  TutorialDialog_8cpp__incl.md5
docs/d1/d96/: classMainWindow__inherit__graph.map
docs/d1/d9f/: WebProfile_8h.html  WebProfile_8h.js  WebProfile_8h_source.html
docs/d1/dc3/: classBookProviders.html  classBookProviders.js
docs/d1/dd5/: MainWindow__llm_8cpp__incl.map  MainWindow__llm_8cpp__incl.md5
docs/d1/dd6/: structEmbeddingProvider_1_1Config.html  structEmbeddingProvider_1_1Config.js
docs/d1/dd8/: classOpfDialog-members.html
docs/d1/df5/: MainWindow_8h__incl.map  MainWindow_8h__incl.md5
docs/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_1a.js  all_1b.js  all_1c.js  all_1d.js  all_1e.js  all_1f.js  all_2.js  all_20.js  all_21.js  all_22.js  all_23.js  all_24.js  all_25.js  all_26.js  all_27.js  all_28.js  all_29.js  all_2a.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  (+94 more)
include/: Config.h.in  README.md
include/app/: App.h
include/reader/: Reader.h
metainfo/: genai-reader.appdata.xml
resources/: app.qrc
resources/appimage/: genai-reader.desktop
scripts/: index_embeddings.py  requirements.txt
src/: main.cpp
src/ai/: EmbeddingIndexer.cpp  EmbeddingIndexer.h  EmbeddingProvider.cpp  EmbeddingProvider.h  LlmClient.cpp  LlmClient.h  VectorIndex.h
src/ui/: AboutDialog.cpp  AboutDialog.h  BookProviders.cpp  BookProviders.h  ChatDock.cpp  ChatDock.h  DictionarySettingsDialog.cpp  DictionarySettingsDialog.h  EmbeddingSettingsDialog.cpp  EmbeddingSettingsDialog.h  LlmSettingsDialog.cpp  LlmSettingsDialog.h  MainWindow.cpp  MainWindow.h  MainWindow_llm.cpp  OpfDialog.cpp  OpfDialog.h  OpfGenAiDialog.cpp  OpfGenAiDialog.h  OpfMergeDialog.cpp  OpfMergeDialog.h  OpfStore.cpp  OpfStore.h  PdfViewerWidget.cpp  PdfViewerWidget.h  RecentFilesDialog.cpp  RecentFilesDialog.h  SearchProgressDialog.cpp  SearchProgressDialog.h  SummaryDialog.cpp  SummaryDialog.h  TutorialDialog.cpp  TutorialDialog.h  ViewerWidget.cpp  ViewerWidget.h  WebPage.h  WebProfile.h  WelcomeDialog.cpp  WelcomeDialog.h
(+358 files in other folders)
